# esp32-freertos-aws

./: .gitignore  CMakeLists.txt  README.md
